[gd_scene load_steps=7 format=3 uid="uid://ds2m7ndkregyi"]

[ext_resource type="Theme" uid="uid://fyt7mt6btc11" path="res://assets/game_theme.tres" id="1_mhv7b"]
[ext_resource type="Script" uid="uid://cf7ljqqxixxvd" path="res://scripts/options.gd" id="1_ubx11"]
[ext_resource type="FontFile" uid="uid://htbwdsovgl7k" path="res://assets/fonts/PixelOperator8.ttf" id="3_knos3"]
[ext_resource type="PackedScene" uid="uid://cv3ahhuutve51" path="res://scenes/components/point_setting.tscn" id="3_ut0dv"]
[ext_resource type="PackedScene" uid="uid://lhvfcmhqqa7s" path="res://scenes/components/volume_slider.tscn" id="4_mhv7b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j6cuv"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="options" type="Control"]
process_mode = 3
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mhv7b")
script = ExtResource("1_ubx11")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.607843)

[node name="Title" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -129.0
offset_right = 160.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dynamic_Elements" type="VBoxContainer" parent="."]
process_mode = 3
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -50.0
offset_right = 89.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="pointsSettings" type="Label" parent="Dynamic_Elements"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"options_text"
text = "Points to win

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="point_setting" parent="Dynamic_Elements/pointsSettings" instance=ExtResource("3_ut0dv")]
layout_mode = 1
offset_top = -27.0
offset_bottom = -3.0

[node name="Master" type="Label" parent="Dynamic_Elements"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_knos3")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_j6cuv")
text = "Master Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="volume_slider" parent="Dynamic_Elements/Master" instance=ExtResource("4_mhv7b")]
layout_mode = 1
bus_name = "Master"

[node name="SFX" type="Label" parent="Dynamic_Elements"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_knos3")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_j6cuv")
text = "SFX Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="volume_slider" parent="Dynamic_Elements/SFX" instance=ExtResource("4_mhv7b")]
layout_mode = 1
bus_name = "SFX"

[node name="Music" type="Label" parent="Dynamic_Elements"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_knos3")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_j6cuv")
text = "Music Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="volume_slider" parent="Dynamic_Elements/Music" instance=ExtResource("4_mhv7b")]
layout_mode = 1
bus_name = "Music"

[node name="Back" type="Button" parent="Dynamic_Elements"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_knos3")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_j6cuv")
text = "Back"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Dynamic_Elements/Back" to="." method="_on_back_pressed"]
